...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@null">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:imageUrl= "@{musician.image}"
                    android:contentDescription="@{`Foto artista` + musician.name}"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@{musician.name}"
                    android:textAppearance="?attr/textAppearanceHeadline5"
...
